feat:基础发送接口

--- a/doc/3.9.8.25.md
+++ b/doc/3.9.8.25.md
@@ -25,7 +25,7 @@ cmake --build ..
 ```
 如果有错误按错误提示修正即可。   
 
-##  3.9.5.81版本，http接口文档，文档仅供参考。   
+##  3.9.8.25版本，http接口文档，文档仅供参考。   
 
 ### 简单说明：   
  所有接口只支持post方法。  
@@ -486,7 +486,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 > 锁定微信
  
 ###### 接口地址
-> [/api/execSql](/api/lockWeChat)
+> [/api/lockWeChat](/api/lockWeChat)
 
 ###### HTTP请求方式
 > POST  JSON
@@ -524,7 +524,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 > 锁定微信
  
 ###### 接口地址
-> [/api/execSql](/api/unlockWeChat)
+> [/api/unlockWeChat](/api/unlockWeChat)
 
 ###### HTTP请求方式
 > POST  JSON
@@ -553,6 +553,313 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 {
     "code": 2,
     "data": null,
+    "msg": "success"
+}
+```
+
+#### 10.进入微信**
+###### 接口功能
+> 打开微信时的进入微信按钮
+ 
+###### 接口地址
+> [/api/clickEnterWeChat](/api/clickEnterWeChat)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, 小于0失败|
+|msg|string|返回信息|
+|data|object|null|
+
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 11.转发消息**
+###### 接口功能
+> 转发微信消息
+ 
+###### 接口地址
+> [/api/forwardMsg](/api/forwardMsg)
+
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|接收人id|
+|msgId|string|消息id|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "wxid":"filehelper",
+    "msgId":"1233312233123"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 12.发送图片**
+###### 接口功能
+> 发送图片
+
+###### 接口地址I
+> [/api/sendImagesMsg](/api/sendImagesMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+|imagePath|string|图片路径|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "wxid":"filehelper",
+    "imagePath":"C:\\test.png"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 13.发送文件消息**
+###### 接口功能
+> 发送文件消息
+
+###### 接口地址
+> [/api/sendFileMsg](/api/sendFileMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid |true |string| 接收人wxid |
+|filePath|true |string|文件绝对路径|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,不为0成功, 0失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "wxid": "filehelper",
+    "filePath": "c:\\test.zip"
+}
+```
+响应：
+``` javascript
+{"code":345686720,"msg":"success","data":null}
+```
+
+#### 14.发送@消息**
+###### 接口功能
+> 发送@消息
+
+###### 接口地址
+> [/api/sendAtText](/api/sendAtText)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxids|string|wxid字符串，多个用,分隔，发送所有人传值"notify@all"|
+|chatRoomId|string|群id|
+|msg|string|消息内容|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+
+    "wxids":"notify@all",
+    "chatRoomId":"123@chatroom",
+    "msg":"你们好啊"
+    
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 67316444768,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 15.发送多个不同@消息**
+###### 接口功能
+> 发送多个不同@消息
+
+###### 接口地址
+> [/api/sendMultiAtText](/api/sendMultiAtText)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId|string|群id|  
+|at|array|消息数组|  
+|&#8194;&#8194;msg|string|消息内容|  
+|&#8194;&#8194;wxid|string|wxid字符串，多个用,分隔，发送所有人传值"notify@all"|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "chatRoomId": "213111111004@chatroom",
+    "at": [
+        {
+            "wxid": "wxid_123",
+            "msg": "1112"
+        },
+        {
+            "wxid": "notify@all",
+            "msg": "2223"
+        }
+    ]
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 67316444768,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 16.获取扫码登录地址**
+###### 接口功能
+> 未登录状态下，获取登录地址，转换成二维码，手机扫码登录
+
+###### 接口地址
+> [/api/getLoginUrl](/api/getLoginUrl)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|返回内容|
+|&#8194;&#8194;loginUrl|string|登录地址|  
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {
+        "loginUrl": "http://weixin.qq.com/x/extdevn1pwd_1YtY3pVY0FBTnhia1dScEtleDJ6Tl122231xJAWFVCcDAzSG5maXpjb2N0T3VmeZOUZlb0ZwdVKbFVN"
+    },
     "msg": "success"
 }
 ```
