--- a/doc/3.9.8.25.md
+++ b/doc/3.9.8.25.md
@@ -863,3 +863,89 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+#### 17.语音转文本**
+###### 接口功能
+> 语音消息转换文本
+
+###### 接口地址
+> [/api/translateVoice](/api/translateVoice)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|消息id|  
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|返回内容|
+
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "msgId":"23206240123137465"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 18.获取语音转文本结果**
+###### 接口功能
+> 获取语音转文本结果 （可以使用数据库查询功能查询，该接口只是为了方便减少hook）
+
+###### 接口地址
+> [/api/getTranslateVoiceText](/api/getTranslateVoiceText)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|消息id|  
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|返回内容|
+|&#8194;&#8194;transtext|string|转换文本|  
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "msgId":"23206212223137465"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {
+        "transtext": "冲冲，冲冲。"
+    },
+    "msg": "success"
+}
+```
