feat:补充好友标签，增加打开url

--- a/doc/3.9.8.25.md
+++ b/doc/3.9.8.25.md
@@ -288,6 +288,10 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 |&#8194;&#8194;nickname|string|昵称|
 |&#8194;&#8194;pinyin|string|简拼|
 |&#8194;&#8194;pinyinAll|string|全拼|
+|&#8194;&#8194;remark|string|备注|
+|&#8194;&#8194;remark_pinyin|string|备注拼音|
+|&#8194;&#8194;remark_pinyin_all|string|备注全拼|
+|&#8194;&#8194;label_ids|string|标签id|
 |&#8194;&#8194;reserved1|number|未知|
 |&#8194;&#8194;reserved2|number|未知|
 |&#8194;&#8194;type|number|未知|
@@ -312,6 +316,10 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
             "nickname": "文件传输助手",
             "pinyin": "WJCSZS",
             "pinyinAll": "wenjianchuanshuzhushou",
+            "remark":"",
+            "remark_pinyin":"",
+            "remark_pinyin_all":"",
+            "label_ids":"",
             "reserved1": 1,
             "reserved2": 1,
             "type": 3,
@@ -946,6 +954,51 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "data": {
         "transtext": "冲冲，冲冲。"
     },
+    "msg": "success"
+}
+```
+
+#### 19.通过浏览器打开url**
+###### 接口功能
+> 微信内置浏览器打开url，或者本地浏览器打开url
+
+###### 接口地址
+> [/api/openUrlByWeChat](/api/openUrlByWeChat)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|url|string|需要打开的链接|  
+|flag|number|内置或者本地浏览器mask ，后四位按位取值，具体参数意义自行尝试，简单可直接传0，1，2|  
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|返回内容|
+
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "url":"http://mp.weixin.qq.com/s?__biz=MzUzMTA",
+    "flag":2
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
     "msg": "success"
 }
 ```
